# torch-twrl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  index.rst  init.lua  rl-scm-1.rockspec  run_tests.sh  testScript.lua  twrl-scm-1.rockspec
agents/gym/: gym_base_agent.lua
agents/gym/learningUpdate/: ddpgUpdate.lua  noLearning.lua  reinforce.lua  tdLambda.lua
agents/gym/model/: ddpgActorCritic.lua  mlp.lua  noModel.lua  qFunction.lua  singleHiddenLayerCategorical.lua  singleHiddenLayerNormal.lua
agents/gym/policy/: categorical.lua  ddpgActor.lua  egreedy.lua  normal.lua  random.lua
agents/local/: qLambda.lua  randomDiscrete.lua  sarsaDiscrete.lua  sarsaLambda.lua
envs/: CartPole.lua  DiscreteGridWorld.lua  MountainCar.lua  RandomWalk.lua
examples/: cartpole-pg.sh  cartpole-random.sh  cartpole-td.sh  parameterSweep.lua  pendulum-pg.sh  rlenvs-cartpole-pg.sh  rlenvs-catch-pg.sh  run.lua  run_tests.sh  sweep.sh  testScript.lua
src/: experiment.lua  init.lua  perf.lua  testScript.lua  tilecoding.lua  trajectory.lua  util.lua
src/agent/: baseAgent.lua  init.lua
src/agent/learningUpdate/: init.lua  noLearning.lua  reinforce.lua  tdLambda.lua  util.lua
src/agent/model/: init.lua  mlp.lua  noModel.lua  qFunction.lua  tilecoding.lua
src/agents/: baseAgent.lua  init.lua
src/rlenvs-api/: client.lua
test/: test-gym.lua  test.lua
testing/gym/: experiment_gym.lua  run_tests.sh  test_gym.lua
testing/local/: experiment_local.lua  run_tests.sh  test_local.lua
util/: gym_utilities.lua  perf.lua  tilecoding.lua  trajectory.lua
(+15 files in other folders)
