CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

FILE(GLOB luasrc *.lua)

ADD_TORCH_PACKAGE(rl "" "${luasrc}")

INSTALL(DIRECTORY "agents" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/rl")
INSTALL(DIRECTORY "envs" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/rl")
INSTALL(DIRECTORY "testing" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/rl")
INSTALL(DIRECTORY "util" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/rl")